[package]
name = "ddrand"
version = "0.3.0"
edition = "2021"
rust-version = "1.78" # Enforce minimum Rust compiler version.
publish = false
authors = [ "melocene" ]
homepage = "https://github.com/melocene/ddrand"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "ddrand"
doc = false
doctest = false
test = false
bench = false

[profile.release]
lto = true
panic = "abort"
strip = true

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "now", "alloc", "winapi", "windows-targets"] }
clap = { version = "4.5.13", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
data-encoding = "2.6.0"
indexmap = "2.3.0"
log = "0.4.22"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
rand_seeder = "0.3.0"
regex = "1.10.6"
remove_dir_all = { version = "0.8.3", features = ["parallel"] }
rfd = { version = "0.14.1", features = ["common-controls-v6"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
slint = { version = "1.6.0", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-winit-software", "std"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "chrono"] }
winreg = "0.52.0"

[build-dependencies]
slint-build = "1.6.0"
