[package]
name = "ddrand"
version = "0.3.0"
edition = "2024"
rust-version = "1.85" # Enforce minimum Rust compiler version.
publish = false
authors = [ "melocene" ]
homepage = "https://github.com/melocene/ddrand"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "ddrand"
doc = false
doctest = false
test = false
bench = false

[profile.release]
lto = true
panic = "abort"
strip = true

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["std", "now", "alloc", "winapi"] }
clap = { version = "4.5.37", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
data-encoding = "2.9.0"
indexmap = "2.9.0"
log = "0.4.27"
rand = "0.9.1"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
regex = "1.11.1"
remove_dir_all = { version = "1.0.0", features = ["parallel"] }
rfd = { version = "0.15.3", features = ["common-controls-v6"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
slint = { version = "1.9.2", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-winit-software", "std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "chrono"] }
winreg = "0.55.0"

[build-dependencies]
slint-build = "1.9.2"
