[package]
name = "ddrand"
version = "0.3.1"
edition = "2024"
rust-version = "1.92" # Enforce minimum Rust compiler version.
publish = false
authors = [ "melocene", "ddrand contributors" ]
homepage = "https://github.com/melocene/ddrand"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "ddrand"
doc = false
doctest = false
bench = false

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock", "alloc"] }
clap = { version = "4.5.54", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
dunce = "1.0.5"
flexi_logger = { version = "0.31.7", features = ["async", "buffer_writer"], default-features = false }
indexmap = "2.13.0"
log = "0.4.29"
open = { version = "5.3.3", features = ["shellexecute-on-windows"] }
rand = "0.9.2"
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
regex = { version = "1.12.2", default-features = false, features = ["std", "perf", "unicode-perl"] }
remove_dir_all = { version = "1.0.0", features = ["parallel"] }
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6"] }
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.14.1", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-winit-software", "std"] }
steamlocate = "2.0.1"

[build-dependencies]
slint-build = "1.14.1"
